--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Buttons</title>
 </head>
-<body>
 
-  hello
-  
+<body>
+  <div class="container">
+    <h2 class="h2-header">Button 1</h2>
+    <div class="button-1-div">
+      <button class="button button-1">subscribe</button>
+    </div>
+    <h2 class="h2-header">Button 3</h2>
+    <div class="button-3-div">
+      <button class="button button-3">Subscribe</button>
+    </div>
+    <h2 class="h2-header">Button 2</h2>
+    <div class="button-2-div">
+      <button class="button button-2">Subscribe</button>
+    </div>
+    <h2 class="h2-header">Button 4</h2>
+    <div class="button-4-div">
+      <button class="button button-4">Subscribe</button>
+    </div>
+  </div>
 </body>
+
 </html>
