did 6 buttons in total

--- a/index.html
+++ b/index.html
@@ -11,21 +11,29 @@
 
 <body>
   <div class="container">
-    <h2 class="h2-header">Button 1</h2>
+    <h2 class="h2-header">Same level as site, then pushed in</h2>
     <div class="button-1-div">
       <button class="button button-1">subscribe</button>
     </div>
-    <h2 class="h2-header">Button 3</h2>
+    <h2 class="h2-header">Same level as site, then pushed in W / Hover effect</h2>
     <div class="button-3-div">
       <button class="button button-3">Subscribe</button>
     </div>
-    <h2 class="h2-header">Button 2</h2>
+    <h2 class="h2-header">Elevated above site then push down to site level (scaled down to 95%)</h2>
     <div class="button-2-div">
       <button class="button button-2">Subscribe</button>
     </div>
-    <h2 class="h2-header">Button 4</h2>
+    <h2 class="h2-header">Elevated above site then push down to site level (scaled down to 95%) W / Hover effect</h2>
     <div class="button-4-div">
       <button class="button button-4">Subscribe</button>
+    </div>
+    <h2 class="h2-header">Elevated above website in an angle, then pushed to site level</h2>
+    <div class="button-5-div">
+      <button class="button button-5">Subscribe</button>
+    </div>
+    <h2 class="h2-header">Elevated above website in an angle, then pushed to site level W/ Hover effect</h2>
+    <div class="button-6-div">
+      <button class="button button-6">Subscribe</button>
     </div>
   </div>
 </body>
