--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="container">
+    <h2 class="h2-header">Hold the mouse down for a second, because to show effect better, I slowed down the transition</h2>
     <h2 class="h2-header">Same level as site, then pushed in</h2>
     <div class="button-1-div">
       <button class="button button-1">subscribe</button>
